--- a/React/package.json
+++ b/React/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "npm-run-all --parallel dev:**",
+    "dev:build:client": "webpack --config webpack.client.js --watch",
     "dev:build:server": "webpack --config webpack.server.js --watch",
     "dev:start": "nodemon --watch build --exec node \"./build/bundle.js\""
   },
