--- a/React/package.json
+++ b/React/package.json
@@ -20,7 +20,9 @@
     "babel-loader": "^8.2.2",
     "express": "^4.17.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
