--- a/React/package.json
+++ b/React/package.json
@@ -17,12 +17,18 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-stage-0": "^7.8.3",
+    "axios": "^0.21.1",
     "babel-loader": "^8.2.2",
     "express": "^4.17.1",
+    "express-http-proxy": "^1.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-router-dom": "^5.2.0"
+    "react-redux": "^7.2.4",
+    "react-router-config": "^5.1.1",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.1.0",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.12",
