--- a/React/package.json
+++ b/React/package.json
@@ -31,7 +31,10 @@
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "css-loader": "^5.2.7",
+    "isomorphic-style-loader": "^5.1.0",
     "nodemon": "^2.0.12",
+    "style-loader": "^3.1.0",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
     "webpack-merge": "^5.8.0",
